[gd_scene load_steps=5 format=3 uid="uid://6puem832v6kw"]

[ext_resource type="Script" uid="uid://bjpb7sqgyaedx" path="res://scripts/coin_inspector_ui.gd" id="1_7itpy"]
[ext_resource type="Texture2D" uid="uid://rm6i6j71nttm" path="res://sprites/mapbg.png" id="1_rwiom"]
[ext_resource type="AudioStream" uid="uid://dhs5s6sel25dt" path="res://sounds/This is a.mp3" id="2_7itpy"]
[ext_resource type="AudioStream" uid="uid://7fjgkaxb0v0m" path="res://sounds/whatkindofcoinisthis.mp3" id="3_yoy5n"]

[node name="coin_inspector_ui" type="CanvasLayer"]
layer = 19
script = ExtResource("1_7itpy")
peculiar_audio = ExtResource("2_7itpy")

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapSprite" type="Control" parent="Control"]
modulate = Color(0.65, 0.65, 0.65, 0.8666667)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.060608
offset_top = 21.258759
offset_right = 46.060547
offset_bottom = 21.25879
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00010880665
scale = Vector2(0.8815515, 0.8815515)
mouse_filter = 2
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Control/MapSprite"]
self_modulate = Color(0.92, 0.92, 0.92, 1)
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997342, 0.997342)
mouse_filter = 2
texture = ExtResource("1_rwiom")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Control/MapSprite"]
self_modulate = Color(0.92, 0.92, 0.92, 1)
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.999996
offset_top = -79.0
offset_right = -57.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997342, 0.997342)
mouse_filter = 2
texture = ExtResource("1_rwiom")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Control/MapSprite"]
self_modulate = Color(0.92, 0.92, 0.92, 1)
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 76.999985
offset_top = -87.00001
offset_right = 77.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997342, 0.997342)
mouse_filter = 2
texture = ExtResource("1_rwiom")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Control/MapSprite"]
self_modulate = Color(0.92, 0.92, 0.92, 1)
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 126.0
offset_top = -3.0000076
offset_right = 126.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997342, 0.997342)
mouse_filter = 2
texture = ExtResource("1_rwiom")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="Control/MapSprite"]
self_modulate = Color(0.92, 0.92, 0.92, 1)
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.999985
offset_top = 58.999996
offset_right = -57.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997342, 0.997342)
mouse_filter = 2
texture = ExtResource("1_rwiom")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Coin Inspector 2.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="CoinContainer" type="HFlowContainer" parent="Control/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 986.6
offset_top = 19.799995
offset_right = 1049.6
offset_bottom = 83.63333
scale = Vector2(1.2310212, 1.2310212)
theme_override_font_sizes/font_size = 40
text = "âœ–"
flat = true

[node name="OnCoinHover" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_yoy5n")
volume_db = -15.0
pitch_scale = 0.9

[node name="OnCoinClick" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -15.0
pitch_scale = 1.1
